# Stochastic-Pertubation-Events

./: README.md  STRUCTURE.md  pyproject.toml
SPE-Project/: pyproject.toml
SPE-Project/spe_project/: GraphSPEModel.py  Rejig.py  SPEdriverEx.py  dynamicsEx.py  first_file.txt  graphFile.txt  sandbox.py  workplace.py
SPE-Project/spe_project/Cases/: SPEDrivers.py  graphDynamicFamilies.py  graphDynamicsEngines.py
SPE-Project/tests/: graphEx.py
SPE_Project/Analytics/Data/GrindrodTestData/: GrindrodTestFile0.txt  GrindrodTestFile1.txt  GrindrodTestFile2.txt  GrindrodTestFile3.txt
SPE_Project/Analytics/Data/Test2Data/: Test2File0.txt  Test2File1.txt  Test2File2.txt  Test2File3.txt  Test2File4.txt
SPE_Project/Analytics/Data/event_triadicData/: event_triadicFile0.txt  event_triadicFile1.txt  event_triadicFile2.txt  event_triadicFile3.txt
SPE_Project/Analytics/Data/grindrodTriadicSettingsData/: analyticsWorkplace.py  edgeDensityCalc.py
SPE_Project/Viz/: ModelVis.py
SPE_Project/spe_project/: GraphSPEModel.py  ModelRunner.py  first_file.txt  sandbox.py  workplace.py
SPE_Project/spe_project/Analytics/: ModelRunner.py
SPE_Project/spe_project/Analytics/Data/bulkTestData/: bulkTestFile0.txt  bulkTestFile1.txt  bulkTestFile2.txt  bulkTestFile3.txt  bulkTestFile4.txt
SPE_Project/spe_project/Analytics/Data/bulkreTestData/: bulkreTestFile0.txt  bulkreTestFile1.txt  bulkreTestFile2.txt  bulkreTestFile3.txt  bulkreTestFile4.txt
SPE_Project/spe_project/Cases/: SPEDriverHelpers.py  SPEDrivers.py  graphDynamicFamilies.py  graphDynamicsEngines.py  initialConditions.py
